--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,13 @@
 *.pyc
 .DS_Store
+.cache
 .idea
+.pants.d
+.pants.workdir.file_lock
+.pids
 .vagrant
 basevm/archive
 basevm/box/*.box
 chef/library/Berksfile.lock
+dist
 lambdas/build
