desktop config resolver

--- a/src/BUILD
+++ b/src/BUILD
@@ -26,6 +26,14 @@ python_binary(
 )
 
 python_binary(
+  name = 'ef-resolve-config',
+  source = 'ef-resolve-config.py',
+  dependencies = [
+    ':tools'
+  ]
+)
+
+python_binary(
   name = 'ef-version',
   source = 'ef-version.py',
   dependencies = [
