add plugins dependency

--- a/src/BUILD
+++ b/src/BUILD
@@ -5,7 +5,8 @@ python_binary(
   source = 'ef-cf.py',
   dependencies = [
     ':boto3',
-    ':ef-open-lib'
+    ':ef-open-lib',
+    ':ef-plugins'
   ]
  )
 
@@ -14,7 +15,8 @@ python_binary(
   source = 'ef-check-config.py',
   dependencies = [
     ':boto3',
-    ':ef-open-lib'
+    ':ef-open-lib',
+    ':ef-plugins'
   ]
 )
 
@@ -33,7 +35,8 @@ python_binary(
   source = 'ef-instanceinit.py',
   dependencies = [
     ':boto3',
-    ':ef-open-lib'
+    ':ef-open-lib',
+    ':ef-plugins'
   ]
 )
 
@@ -42,7 +45,8 @@ python_binary(
   source = 'ef-password.py',
   dependencies = [
     ':boto3',
-    ':ef-open-lib'
+    ':ef-open-lib',
+    ':ef-plugins'
   ]
 )
 
@@ -51,23 +55,14 @@ python_binary(
   source = 'ef-resolve-config.py',
   dependencies = [
     ':boto3',
-    ':ef-open-lib'
-  ]
-)
-
-python_binary(
-  name = 'ef-version',
-  source = 'ef-version.py',
-  dependencies = [
-    ':boto3',
     ':ef-open-lib',
     ':ef-plugins'
   ]
 )
 
 python_binary(
-  name = 'ef-scratchpad',
-  source = 'ef-scratchpad.py',
+  name = 'ef-version',
+  source = 'ef-version.py',
   dependencies = [
     ':boto3',
     ':ef-open-lib',
