add yaml dependency and remove ef_site_config from build

--- a/src/BUILD
+++ b/src/BUILD
@@ -6,7 +6,8 @@ python_binary(
   dependencies = [
     ':boto3',
     ':ef-open-lib',
-    ':ef-plugins'
+    ':ef-plugins',
+    ':yaml'
   ]
  )
 
@@ -77,11 +78,15 @@ python_requirement_library(
   ]
 )
 
+python_requirement_library(
+  name = 'yaml',
+  requirements = [
+    python_requirement("pyyaml")
+  ]
+)
+
 python_library(
   name = 'ef-open-lib',
-  dependencies = [
-    environ["EF_SITE_REPO"]+":efsiteconfig"
-  ],
   sources = globs('ef_*.py', exclude=['ef_site_config.py'])
 )
 
