--- a/tests/test_data/ef_site_config.yml
+++ b/tests/test_data/ef_site_config.yml
@@ -18,7 +18,7 @@
 DEFAULT_REGION: "us-west-2"
 
 # Repo where tools and all EF data are
-EF_REPO: "github.com/crunchyroll/ellation_formation"
+EF_REPO: "github.com/crunchyroll/ef-open"
 EF_REPO_BRANCH: "master"
 
 # Map environment::account alias (aliases must profiles in .aws/credentials for local use)
