add list and multiline parameters

--- a/tests/test_data/test_params.yml
+++ b/tests/test_data/test_params.yml
@@ -15,6 +15,13 @@ params:
   test:
     one: testenv one
     two: testenv two
+    multi: |-
+      thisisareallylongstringthatcoversmultiple
+      linesfortestingmultilinestrings
+    list:
+      - one
+      - two
+      - three
     ENV: myenvironmentshouldnotoverride
   staging:
     one: staging one
