--- a/tests/test_data/ef_site_config.yml
+++ b/tests/test_data/ef_site_config.yml
@@ -1,4 +1,4 @@
-# Copyright 2016-2017 Ellation, Inc.
+# Copyright 2016-2019 Ellation, Inc.
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -23,8 +23,8 @@ EF_REPO_BRANCH: "master"
 
 # Map environment::account alias (aliases must profiles in .aws/credentials for local use)
 ENV_ACCOUNT_MAP:
-  test: "testaccount"
   alpha: "alphaaccount"
+  test: "testaccount"
 
 # Map environment::number for environments that support multiple ephemeral replicas
 # Resolves as proto<0..N> up to number - 1 (proto0, proto1, proto2, proto3 for N = 4)
@@ -61,8 +61,15 @@ S3_VERSION_BUCKET: "ellation-cx-global-versions"
 SPECIAL_VERSION_ENVS:
   - "test"
 
+# Stack Termination Protected environments
+STACK_TERMINATION_PROTECTED_ENVS:
+  - "alpha"
+
 # Custom data that can be referenced via lookup
 CUSTOM_DATA:
-  mock_data: "mock_data_1"
+  office_ips:
+    - "192.168.1.2/32" # test ip
 
+# Plugin configuration section
 PLUGINS:
+  newrelic:
