--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ python:
     - "2.7"
 
 install:
-    pip install -p
+    - python setup.py install
+    - python setup.py test
 script:
     python -m unittest discover
