--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,6 @@ python:
     - "2.7"
 
 install:
-    - python setup.py install
-    - python setup.py test
+    - pip install -e .
 script:
     python -m unittest discover
