OPS-11861 Add CircleCI flair, first attempt at circle config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,19 +1,17 @@
 version: 2.1
 
-orbs:
-  python: circleci/python@0.2.1
-
 jobs:
   build-and-test:
-    executor: python/default
+    docker:
+      - image: circleci/python:3.7.7
     steps:
       - checkout
-      - python/load-cache
-      - python/install-deps
-      - python/save-cache
       - run:
-          command: ./manage.py test
-          name: Test
+          command: python setup.py test
+          name: Unit Test
+      - run:
+          command: pylint --rcfile=./pylintrc ./efopn
+          name: Pylint Test
 
 workflows:
   main:
