--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
           command: sudo python -m unittest discover
           name: Run Unit Test
       - run:
-          command: pylint --rcfile=./pylintrc ./efopen
+          command: pylint --rcfile=./pylintrc --disable=C,W,R ./efopen
           name: Run Pylint
 workflows:
   main:
