--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,14 +6,13 @@ jobs:
       - image: circleci/python:2.7
     steps:
       - checkout
-      - run: pip install .
-      - run: pip install mock pylint
+      - run: pip install '.[test]'
       - run:
           command: python -m unittest discover
-          name: Run Unit Test
+          name: Unit Tests
       - run:
           command: pylint --rcfile=./pylintrc --disable=C,W,R ./efopen
-          name: Run Pylint
+          name: Pylint
 workflows:
   main:
     jobs:
