--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,16 @@ jobs:
       - run:
           command: python -m unittest discover
           name: Unit Tests
+      - aws-cli/install
+      - aws-cli/setup:
+          profile-name:
+          aws-access-key-id: AWS_ACCESS_KEY_ID_ELLATIONENG
+          aws-region: AWS_DEFAULT_REGION
+          aws-secret-access-key: AWS_SECRET_ACCESS_KEY_ELLATIONENG
+orbs:
+  aws-cli: circleci/aws-cli@1.0.0
 workflows:
   main:
     jobs:
-      - build-and-test
+      - build-and-test:
+          context: aws
