--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
           fingerprints:
             - "d4:9b:bb:11:ac:cc:d0:19:e1:aa:5c:ea:fb:95:b6:96"
       - run:
-          command: git clone git@github.com:crunchyroll/ellation_formation.git
+          command: git@github.com:crunchyroll/cx-user-content-flags.git
           name: Test git
 orbs:
   aws-cli: circleci/aws-cli@1.0.0
