--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,15 +6,11 @@ jobs:
       - image: circleci/python:2.7
     steps:
       - checkout
-      - run: pip install '.[test]'
-      - run:
-          command: python -m unittest discover
-          name: Unit Tests
       - add_ssh_keys:
           fingerprints:
             - "d4:9b:bb:11:ac:cc:d0:19:e1:aa:5c:ea:fb:95:b6:96"
       - run:
-          command: git@github.com:crunchyroll/cx-user-content-flags.git
+          command: git clone git@github.com:crunchyroll/cx-user-content-flags.git
           name: Test git
 orbs:
   aws-cli: circleci/aws-cli@1.0.0
