--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,13 +6,17 @@ jobs:
       - image: circleci/python:2.7
     steps:
       - checkout
+      - run: |
+              echo -e "${SSH_KEY}" > ~/.ssh/github.key
+              chmod 600 ~/.ssh/github.key
+              echo  'Host github.com' >>  ~/.ssh/config
+              echo  '    IdentitiesOnly yes' >>  ~/.ssh/config
+              echo  '    IdentityFile ~/.ssh/github.key' >>  ~/.ssh/config
       - run:
           command: git clone git@github.com:crunchyroll/cx-user-content-flags.git
           name: Test git
-orbs:
-  aws-cli: circleci/aws-cli@1.0.0
 workflows:
   main:
     jobs:
       - build-and-test:
-          context: aws
+          context: github
