--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
               echo  '    IdentityFile ~/.ssh/github.key' >>  ~/.ssh/config
       - run:
           command: git clone git@github.com:crunchyroll/cx-user-content-flags.git
-          name: Test git again
+          name: Test git again and again
 workflows:
   main:
     jobs:
