--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,12 +6,15 @@ jobs:
       - image: circleci/python:2.7
     steps:
       - checkout
-      - run: |
-              echo -e "${SSH_KEY}" > ~/.ssh/github.key
+      - run:
+          command: |
+              echo -e "${SSH_KEY}" > github.key
+              tr -d '\b' < github.key > ~/.ssh/github.key
               chmod 600 ~/.ssh/github.key
               echo  'Host github.com' >>  ~/.ssh/config
               echo  '    IdentitiesOnly yes' >>  ~/.ssh/config
               echo  '    IdentityFile ~/.ssh/github.key' >>  ~/.ssh/config
+          name: Add SSH key
       - run:
           command: git clone git@github.com:crunchyroll/cx-user-content-flags.git
           name: Test git again and again and again
