--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [versioneer]
 VCS = git
 style = pep440
-versionfile_source = efopen/_version.py
-versionfile_build = efopen/_version.py
+versionfile_source = crfopen/_version.py
+versionfile_build = crfopen/_version.py
 tag_prefix = ''
